--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
             </div>
         </section>
 
+
+
+<!-- 
+<form action="https://formsubmit.co/your@email.com" method="POST">
+     <input type="text" name="name" required>
+     <input type="email" name="email" required>
+     <button type="submit">Send</button>
+</form>
+
+
+ -->
+
+
+        <form action="https://formsubmit.co/fadi.a2016@gmail.com" method="POST">
         <section class="part3" id="contact-me">
             <div class="information-contact">
                 <h2>Contact Me</h2>
@@ -99,6 +113,7 @@
                 </div>
             </div>
         </section>
+        </form>
 
         <section></section>
         <footer></footer>
