--- a/index.html
+++ b/index.html
@@ -70,49 +70,37 @@
         </section>
 
 
-
-<!-- 
-<form action="https://formsubmit.co/your@email.com" method="POST">
-     <input type="text" name="name" required>
-     <input type="email" name="email" required>
-     <button type="submit">Send</button>
-</form>
-
-
- -->
-
-
         <form action="https://formsubmit.co/fadi.a2016@gmail.com" method="POST">
-        <section class="part3" id="contact-me">
-            <div class="information-contact">
-                <h2>Contact Me</h2>
-                <div class="continer-contact">
-                    <form action="">
-                        <div class="form-group">
-                            <label for="firstName">First Name</label>
-                            <input type="text" id="firstName" name="firstName">
-                        </div>
+            <section class="part3" id="contact-me">
+                <div class="information-contact">
+                    <h2>Contact Me</h2>
+                    <div class="continer-contact">
+                        <form action="">
+                            <div class="form-group">
+                                <label for="firstName">First Name</label>
+                                <input type="text" id="firstName" name="firstName" placeholder="Your First Name" required>
+                            </div>
 
-                        <div class="form-group">
-                            <label for="lastName">Last Name</label>
-                            <input type="text" id="lastName" name="lastname">
-                        </div>
+                            <div class="form-group">
+                                <label for="lastName">Last Name</label>
+                                <input type="text" id="lastName" name="lastname" placeholder="Your Last Name" required>
+                            </div>
 
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email">
-                        </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+                            </div>
 
-                        <div class="form-group">
-                            <label for="massage">Massage</label>
-                            <textarea id="massage" name="massage" cols="30" rows="10"></textarea>
-                        </div>
+                            <div class="form-group">
+                                <label for="massage">Massage</label>
+                                <textarea id="massage" name="massage" cols="30" rows="10" placeholder="Your Message"></textarea>
+                            </div>
 
-                        <button class="button-submit" type="submit">Submit</button>
-                    </form>
+                            <button class="button-submit" type="submit">Submit</button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
         </form>
 
         <section></section>
